# morphir

./: .beads  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .goreleaser.yaml  .mill-jvm-version  .mill-version  .prototools  .scalafmt.conf  AGENTS.md  AGENT_HANDOFF.md  CHANGELOG.md  CI_RELEASE_FAQ.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  Directory.Build.props  Directory.Packages.props  Dockerfile  INSTALLING.md  Insight-README.md  Justfile  LICENSE  LICENSE.spdx  Makefile.toml  Morphir.sln  NOTES.md  NOTICE  README.md  README.template.md  TestingFramework-README.md  _config.yml  allow-list.json  buf.gen.yaml  buf.yaml  build-helpers.mill  (+40 more)
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: .gitignore  settings.json
.config/: dotnet-tools.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY_REWRITE_2026-01-08.md  markdown-link-check-config.json  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
.moon/: tasks.yml  toolchain.yml  workspace.yml
apps/cli/: Cargo.toml  build.rs  module.sc
apps/cli/src/: app.rs  cli.rs  cli_args.rs  js_extensions.rs  lib.rs  main.rs  settings.rs
apps/cli/src/actors/: mod.rs
apps/cli/src/models/: mod.rs
apps/cli/src/morphir_js/: mod.rs
apps/cli/src/morphirjs/: mod.rs
apps/cli/src/org/finos/morphir/cli/: Main.scala  package.scala
apps/cli/src/org/finos/morphir/cli/command/: make.scala
cadl-Frontend/: main.cadl  package-lock.json  package.json  tsconfig.json
cadl-docs/: README.md
ci/: release-applications.sh  release-maven-libraries.sh  release-maven.sh
cli/: .gitignore  cli.js  dev-cli.js  elm.json  index.html  index.js  morphir-dapr.js  morphir-elm-develop.js  morphir-elm-gen.js  morphir-elm-make.js  morphir-elm-test.js  morphir-elm.js  morphir.js  tree-view.css  treeStuff.js
cli2/: .gitignore  Dependencies.ts  DockerTemplateFile  FileChanges.ts  cli.ts  cliAPI.ts  config-processing.ts  dependencies.ts  elm.json  morphir-elm.ts  morphir-generate-test-data.ts  morphir-init.ts  morphir-json-schema-gen.ts  morphir-make.ts  morphir-make2.ts  morphir-scala-gen.ts  morphir-test-coverage.ts  morphir.ts  tsconfig.json
contribution-guide/: verification.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codemodel/: Cargo.toml
crates/codemodel/src/: error.rs  lib.rs  manifest.rs  name.rs
crates/codemodel/src/config/: mod.rs
crates/codemodel/src/project/: mod.rs
crates/codemodel/src/workspace/: config.rs  error.rs  locater.rs  mod.rs  states.rs
crates/main/: Cargo.toml
crates/main/config/: morphir.default.toml
crates/main/src/: cli_args.rs  main.rs  settings.rs
crates/morphir/: BUILD_WASM.md  Cargo.toml  build.rs
crates/morphir-elm-compiler-rs/: Cargo.toml
crates/morphir-elm-compiler-rs/src/: compiler.rs  elm.pest  main.rs
crates/morphir-live/: AGENTS.md  Cargo.toml  Dioxus.toml  ReadMe.md  index.html
crates/morphir-live/assets/: main.css  tailwind.css
crates/morphir-live/src/: app.rs  app_config.rs  cli.rs  data.rs  lib.rs  main.rs  models.rs  monaco.rs  routes.rs
crates/morphir-live/src/components/: app_layout.rs  cards.rs  content_filters.rs  layout.rs  mod.rs  mode_switcher.rs  nav_item.rs  quick_access.rs  search.rs  selected_item.rs  sidebar.rs  toolbar.rs  upload_button.rs
crates/morphir-live/src/components/detail_views/: mod.rs  model_detail.rs  project_detail.rs  workspace_detail.rs
crates/morphir-live/src/components/pages/: home.rs  mod.rs  model_detail.rs  model_list.rs  not_found.rs  project_detail.rs  project_list.rs  project_settings.rs  try_mode.rs  workspace_detail.rs  workspace_list.rs  workspace_settings.rs
crates/morphir-live/src/components/settings/: form_controls.rs  mod.rs  monaco_editor.rs  settings_section.rs  settings_tab_bar.rs  settings_toml_tab.rs  settings_ui_tab.rs  settings_view.rs
crates/morphir-live/src/components/settings/editor/: desktop.rs  mod.rs  web.rs
crates/morphir-platform/: Cargo.toml  moon.yml
crates/morphir-platform/src/: bindings.rs  lib.rs
crates/morphir-platform/wit/: world.wit
crates/morphir-runtime/: Cargo.toml  build.rs
crates/morphir-runtime-sandbox/: Cargo.toml
crates/morphir-runtime-sandbox/src/: lib.rs  main.rs
crates/morphir-runtime-wasm/: Cargo.toml  moon.yml
crates/morphir-runtime-wasm/src/: lib.rs
crates/morphir-runtime/src/: main.rs  runtime.js
crates/morphir/src/: error.rs  help.rs  lib.rs  logging.rs  main.rs  output.rs
crates/morphir/src/commands/: compile.rs  dist.rs  extension.rs  generate.rs  gleam.rs  migrate.rs  mod.rs  schema.rs  tool.rs  transform.rs  validate.rs  version.rs
crates/morphir/src/tui/: mod.rs  pager.rs
crates/morphir/tests/: cli_integration.rs
crates/testkit/: Cargo.toml
crates/testkit/tests/: example.rs  module.rs
crates/testkit/tests/features/morphir/codemodel/: module.feature
crates/testkit/tests/features/sandbox/: animal.feature
dapr-test/: morphir-dapr.json
datashare/: .gitignore  README.md  datashare.manifest.json  example_graphql_queries.json  graphql_server.js  package.json  test.foo.dataset.json  test.foo.element.json  test.foo.query.json
dco/: dco_javierbarrios-morganstanley.md  dco_template.md
developers-guide/: README.md
devkit/: ReadMe.md
devkit/rust/cdk/: Cargo.toml  ReadMe.md
devkit/rust/cdk/src/: lib.rs
devkit/rust/cdk/src/internals/: mod.rs  naming.rs
devkit/rust/rdk/: Cargo.toml
devkit/rust/tdk/: Cargo.toml
devkit/rust/tdk/src/: funcs.rs
docs/: 0002-morphir-cli-incremental-build-approach.md  CNAME  Insight-README.md  README.md  TestingFramework-README.md  about-finos.md  application-modeling.md  application_modeling.md  background.md  cadl-doc.md  cli-cli2-merging-docs.md  code-of-conduct.md  codec-docs.md  command-line-tools.md  configuration.md  contributing.md  contribution-guide-index.md  contribution-guide-readme.md  contribution-guide.md  custom-attributes.md  decorators-users-guide.md  dev-bots.md  dev_bots.md  developer-guide-index.md  editor-setup.md  error-append-not-supported.md  faqs.md  generating-json-schema.md  home.md  (+77 more)
(+3637 files in other folders)
