[package]
name = "morphir"
version.workspace = true
description = "Morphir CLI"
homepage.workspace = true
keywords = ["morphir", "finos"]
authors.workspace = true
license.workspace = true
edition.workspace = true

[badges]
maintnance = { status = "actively-developer" }

[[bin]]
name = "morphir"
path = "src/main.rs"

[lib]
name = "morphir"
path = "src/lib.rs"

[features]

[dependencies]
#boa_engine.workspace = true
tokio.workspace = true

[build-dependencies]
#git-download = "0.1.1"
download_git = "0.0.2"
