[package]
name = "morphir-codemodel"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
derive_more.workspace = true
schematic.workspace = true
serde.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
smoothy.workspace = true
starbase_sandbox.workspace = true
