[package]
name = "morphir-codemodel"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
path-absolutize.workspace = true
anyhow.workspace = true
config.workspace = true
derive_more.workspace = true
schematic.workspace = true
serde.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true

[dev-dependencies]
miette.workspace = true
smoothy.workspace = true
starbase_sandbox.workspace = true
tracing-test.workspace = true
