[package]
name = "morphir-platform"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = [
    "color",
    "derive",
    "env",
    "help",
    "suggestions",
    "usage",
    "wrap_help",
] }
clap_complete = { workspace = true }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]


[package.metadata.component]
package = "morphir:platform"

[package.metadata.component.dependencies]
