[package]
name = "morphir-runtime-sandbox"
version.workspace = true
description = "Morphir runtime"
homepage.workspace = true
keywords = ["morphir", "finos"]
authors.workspace = true
license.workspace = true
edition.workspace = true

[badges]
maintnance = { status = "actively-developer" }

[[bin]]
name = "morphirx"
path = "src/main.rs"

[lib]
crate_type = ["cdylib"]

[features]

[dependencies]
deno_core.workspace = true
deno_ast = { workspace = true, features = ["transpiling"] }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_v8.workspace = true
extism-pdk.workspace = true

[build-dependencies]
deno_core.workspace = true