[package]
name = "morphir-runtime-wasm"
version.workspace = true
description = "Morphir runtime"
homepage.workspace = true
keywords = ["morphir", "finos"]
authors.workspace = true
license.workspace = true
edition.workspace = true

[badges]
maintnance = { status = "actively-developer" }

[lib]
crate-type = ["cdylib"]
name = "morphir_runtime"
path = "src/lib.rs"

[features]

[dependencies]
boa_engine.workspace = true
extism-pdk.workspace = true
serde_json.workspace = true

[build-dependencies]
