[package]
name = "morphir_tdk"
version = "0.0.1"
description = "Morphir Tool Development Kit"
homepage = "https://morphir.finos.org"
repository = "https://github.com/finos/morphir"
readme = "README.md"
keywords = ["morphir", "finos"]
authors = ["Damian Reeves"]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["host"]
host = []

[dependencies]
flagset.workspace = true
lasso.workspace = true
serde_repr = { workspace = true, optional = true }
